src/clients/snapshots/cake__clients__responses__response_parsing_tests__to_api_input_assistant_message_with_id_and_status.snap
---
source: src/clients/responses.rs
expression: to_api_input_json(&item)
---
{
  "content": [
    {
      "annotations": [],
      "text": "Hi there",
      "type": "output_text"
    }
  ],
  "id": "msg-1",
  "role": "assistant",
  "status": "completed",
  "type": "message"
}
