src/clients/snapshots/cake__clients__responses__response_parsing_tests__to_api_input_function_call.snap
---
source: src/clients/responses.rs
expression: to_api_input_json(&item)
---
{
  "arguments": "{\"cmd\":\"ls\"}",
  "call_id": "call-1",
  "id": "fc-1",
  "name": "bash",
  "type": "function_call"
}
