src/clients/snapshots/cake__clients__responses__response_parsing_tests__to_api_input_function_call_output.snap
---
source: src/clients/responses.rs
expression: to_api_input_json(&item)
---
{
  "call_id": "call-1",
  "output": "file.txt\nother.txt",
  "type": "function_call_output"
}
