src/clients/snapshots/cake__clients__responses__response_parsing_tests__to_api_input_function_call_output_with_images.snap
---
source: src/clients/responses_response_parsing_tests.rs
expression: to_api_input_json(&item)
---
{
  "call_id": "call-1",
  "output": [
    {
      "text": "ReadImage shot.png (69 bytes, image/png)",
      "type": "input_text"
    },
    {
      "image_url": "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAADElEQVR42mP4z8AAAAMBAQD3A0FDAAAAAElFTkSuQmCC",
      "type": "input_image"
    }
  ],
  "type": "function_call_output"
}
