src/clients/snapshots/cake__clients__responses__response_parsing_tests__to_api_input_reasoning_no_summary.snap
---
source: src/clients/responses.rs
expression: to_api_input_json(&item)
---
{
  "id": "r-3",
  "summary": [],
  "type": "reasoning"
}
