src/clients/snapshots/cake__clients__responses__response_parsing_tests__to_api_input_reasoning_with_encrypted_content.snap
---
source: src/clients/responses.rs
expression: to_api_input_json(&item)
---
{
  "encrypted_content": "gAAAAABencrypted...",
  "id": "r-1",
  "summary": [
    {
      "text": "thinking...",
      "type": "summary_text"
    }
  ],
  "type": "reasoning"
}
