src/clients/snapshots/cake__clients__responses__response_parsing_tests__to_api_input_reasoning_with_summary.snap
---
source: src/clients/responses.rs
expression: to_api_input_json(&item)
---
{
  "id": "r-1",
  "summary": [
    {
      "text": "thinking...",
      "type": "summary_text"
    }
  ],
  "type": "reasoning"
}
