src/clients/snapshots/cake__clients__responses__response_parsing_tests__to_api_input_user_message.snap
---
source: src/clients/responses.rs
expression: to_api_input_json(&item)
---
{
  "content": [
    {
      "text": "Hello",
      "type": "input_text"
    }
  ],
  "role": "user",
  "type": "message"
}
